...
                    key: _resetPwdForm,
                    child: Column(
                      children: [
                        Padding(
                          padding: const EdgeInsets.only(left: 20.0, right: 40),
                          child: TextFormField(
                            key: const Key("newPassText"),
                            style: const TextStyle(
                                color: Color(0xFF0093CD), fontFamily: 'UniNeue'),
                            validator: (val) {
                              return null;
                            },
                            controller: pwdController,
...
                          ),
                        ),
                        Padding(
                          padding:
                          const EdgeInsets.only(left: 20.0, right: 40, top: 50),
                          child: TextFormField(
                            key: const Key("confirmNewPassText"),

                            style: const TextStyle(
                                color: Color(0xFF0093CD), fontFamily: 'UniNeue'),
                            validator: (val) {
                              return null;
                            },
...
