...
                            child: Column(
                              children: [
                                Padding(
                                  padding: const EdgeInsets.only(
                                      left: 20.0, right: 40),
                                  child: TextFormField(
                                    key: const Key('emailLogin'),
                                    style: const TextStyle(
                                        color: Colors.white,
                                        fontFamily: 'UniNeue',
                                        fontSize: 18),
                                    // validator: (val) => validateEmail(val!),
                                    controller: emailController,
...
                                  height: 40,
                                ),
                                Padding(
                                  padding: const EdgeInsets.only(
                                      left: 20.0, right: 40),
                                  child: TextFormField(
                                    key: const Key('passwordLogin'),
                                    style: const TextStyle(
                                        color: Colors.white,
                                        fontFamily: 'UniNeue',
                                        fontSize: 18),
                                    validator: (val) => validatePassword(val!),
                                    obscureText: obscureText,
...
