...
                        child: Column(
                          children: [
                            Padding(
                              padding:
                              const EdgeInsets.only(left: 20.0, right: 40),
                              child: TextFormField(
                                key: const Key("enterYourCode"),
                                style: const TextStyle(
                                    color: Colors.white, fontFamily: 'UniNeue'),
                                validator: (val) {
                                  return null;
                                },
                                controller: codeController,
...
